out/old/manifests/survey-doe/Service.survey-v2-service.yaml
metadata:
  name: survey-v2-service
  namespace: survey-doe
  labels:
    app: survey-v2
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: survey-v2
  clusterIP: <IP_119>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
