out/old/manifests/survey-doe/Ingress.survey-v2-ingress.yaml
metadata:
  name: survey-v2-ingress
  namespace: survey-doe
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"survey-doe:survey-v2-service","ingressName":"survey-doe:survey-v2-ingress","hostname":"survey-aqei.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-max-body-size: 50m
    nginx.ingress.kubernetes.io/configuration-snippet: 'proxy_set_header Upgrade $http_upgrade;

      proxy_set_header Connection "upgrade";

      proxy_cache_bypass $http_upgrade;

      '
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  ingressClassName: nginx
  rules:
  - host: survey-aqei.<COMPANY_DOMAIN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: survey-v2-service
            port:
              number: 8080
apiVersion: <DOMAIN_775>/v1
kind: Ingress
